--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body{
     background-color: rgb(20, 19, 19);
     background-position: absolute;
     background-size: 100% auto;
+    max-width: 580px;
+    width: 90%;
+    margin: 32px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 section{
